# macos-game-patches

./: .gitignore  .gitmodules  .local.md.example  AGENTS.md  GPT54_HANDOFF_STATUS.md  README.md  TOOLS.md  pyproject.toml
.github/: github-repo-workflow.json  github.json
docs/: alvr-lock.json  alvr-source.md  apple-vr-endgame-plan.md  bridge-ipc-v1.md  cli.md  crossover-repro-bundle.md  d3dmetal-directmode-patch-runbook.md  dev-environments.md  direct-mode-blocker-dossier.md  direct-mode-bottom-stack-patch-targets.md  environment.md  external-projects-map.md  facts.md  live-validation-evidence.md  local-facts.md  option-b-v21-native-bridge-plan.md  real-pixels-upstream-checklist.md  rebuild-plan.md  source-workspace.md  steamvr-alvr-plan.md  steamvr-compositor-blocker.md  steamvr-smoke.md
tools/: alvr_driver_deploy.py  alvr_driver_register.py  alvr_lock.py  avp_alvr_control.py  avp_client_build_install.py  clearxr_backend_audit.py  clearxr_headless_stub.py  clearxr_native_probe.py  d3d11_readback_probe.cpp  d3d11_shm_writer_probe.cpp  d3dmetal_patch.py  d3dmetal_shared_stub_report.py  d3dmetal_texture_layout_probe.py  fake_openvr_real.cpp  first_game_attempt.py  hevc_gate.py  live_avp_checkpoint.py  live_avp_directmode_matrix.py  live_avp_nondirect_prod.py  live_avp_release_gate.py  live_clearxr_avp.py  live_clearxr_avp_winders.py  macos_window_capture_loop.swift  macos_window_capture_probe.swift  macos_window_capture_stream.swift  openvr_app_loop_probe.cpp  openvr_submit_shim.cpp  openvr_submit_smoke.cpp  package_crossover_repro_bundle.py  phase1_controlled_runtime_matrix.py  phase1_gptk_runtime_matrix.py  probe_clearxr_winders.py  shared_content_probe.py  smoke_clearxr_winders.py  stage_clearxr_winders.py  steamvr_smoke.py  (+13 more)
(+34 files in other folders)
