[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "macos-game-patches"
version = "0.1.0"
description = "macOS compatibility patch runner for Windows games under CrossOver/Wine"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "macos-game-patches" }]
dependencies = []

[project.scripts]
patch = "macos_game_patches.cli:main"
run = "macos_game_patches.clean_run:main_run"
clean-run = "macos_game_patches.clean_run:main_clean_run"
clean-patch-run = "macos_game_patches.clean_run:main_clean_patch_run"

# Backward-compat alias (deprecated)
clear-run = "macos_game_patches.clean_run:main_clear_run"
clean = "macos_game_patches.clean:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/macos_game_patches"]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.ruff]
line-length = 120
target-version = "py313"
